--- a/kanban.css
+++ b/kanban.css
@@ -30,6 +30,10 @@
     padding: 32px 32px 0;
 }
 
+#go-back{
+    background: transparent;
+}
+
 #todo-form input {
     padding: 12px;
     margin-right: 12px;
