--- a/kanban.css
+++ b/kanban.css
@@ -20,12 +20,21 @@
     height: 100vh;
     overflow: scroll;
 
-    background-image: url(https://images.unsplash.com/photo-1500989145603-8e7ef71d639e?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8NHx8ZGVza3xlbnwwfHwwfHw%3D&auto=format&fit=crop&w=1400&q=60);
+    background-image: url(https://images.unsplash.com/photo-1437419764061-2473afe69fc2?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1932&q=80);
     background-position: center;
     background-size: cover;
 }
 
 /* ---- FORM ---- */
+.button-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 10px; /* Adjust this value to set the space between the form and the button */
+}
+
+
+
 #todo-form {
     padding: 32px 32px 0;
 }
