home page functionality added to kanban and pomodoro

--- a/PomodoroTimer/pomodoro.css
+++ b/PomodoroTimer/pomodoro.css
@@ -55,6 +55,10 @@
     padding: 20px;
     text-align: center;
   }
+
+  #go-back{
+    background: transparent;
+}
   
   .clock {
     margin-top: 50px;
